fix: test and imports for ZARR3 StorageFormat
Signed-off-by: Caleb Hulbert <cmhulbert@gmail.com>